--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li>
+                    <!-- LinkedIn link with icon -->
+                    <a href="https://www.linkedin.com/in/anushka-basani-757518226/">
+                        <img src="static/main/images/social-linkedin.png" alt="LinkedIn" class="social-icon">
+                        <span class="linkedin-text">LinkedIn</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
