--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li>
                     <!-- LinkedIn link with icon -->
                     <a href="https://www.linkedin.com/in/anushka-basani-757518226/">
-                        <img src="static/main/images/social-linkedin.png" alt="LinkedIn" class="social-icon">
+                        <img src="images/social-linkedin.png" alt="LinkedIn" class="social-icon">
                         <span class="linkedin-text">LinkedIn</span>
                     </a>
                 </li>
