icond and backround

--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li>
-                    <!-- LinkedIn link with icon -->
-                    <a href="https://www.linkedin.com/in/anushka-basani-757518226/">
-                        <img src="images/social-linkedin.png" alt="LinkedIn" class="social-icon">
-                        <span class="linkedin-text">LinkedIn</span>
+                    <a href="contact.html">Contact</a>
+                    <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
+                        <img src="images/linkedin-icon.png" alt="LinkedIn Icon" class="linkedin-icon">
                     </a>
                 </li>
             </ul>
@@ -26,6 +24,7 @@
 
     <main>
         <section class="hero">
+            <img src="images/background.png" alt="Background Image" class="hero-bg">
             <h1>Hello, I'm Anushka Basani!</h1>
             <p>Welcome to my personal website. Explore to learn more about me, my journey, and my work.</p>
         </section>
