about and contact page

--- a/about.html
+++ b/about.html
@@ -12,7 +12,12 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                    <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
+                        <img src="images/linkedin-icon.png" alt="LinkedIn Icon" class="linkedin-icon">
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -20,9 +25,9 @@
     <main>
         <section>
             <h1>About Me</h1>
-            <img src="images/pfp.jpg" alt="Anushka Basani's Profile Picture" class="profile-pic">
+            <img src="images/pfp.jpg" alt="Profile Picture of Anushka Basani" class="profile-pic">
             <p>
-                Hi! I'm Anushka Basani, a Computer Science student at Michigan State University with a passion for software development, data analysis, and innovation.
+                Hi! I'm Anushka Basani, a Computer Science student at Michigan State University with a passion for software development, data analysis, and innovation. 
                 I enjoy solving complex problems, creating meaningful projects, and sharing knowledge. In my free time, I love playing games, baking, reading, and exploring new ideas.
             </p>
         </section>
