--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,12 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                    <a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">
+                        <img src="images/linkedin-icon.png" alt="LinkedIn Icon" class="linkedin-icon">
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -32,7 +37,6 @@
 
                 <button type="submit">Send Message</button>
             </form>
-            <p>You can also reach me directly at <a href="mailto:kodalisp@msu.edu">kodalisp@msu.edu</a>.</p>
         </section>
     </main>
 
