--- a/about.html
+++ b/about.html
@@ -23,13 +23,17 @@
     </header>
 
     <main>
-        <section>
-            <h1>About Me</h1>
-            <img src="images/pfp.jpg" alt="Profile Picture of Anushka Basani" class="profile-pic">
-            <p>
-                Hi! I'm Anushka Basani, a Computer Science student at Michigan State University with a passion for software development, data analysis, and innovation. 
-                I enjoy solving complex problems, creating meaningful projects, and sharing knowledge. In my free time, I love playing games, baking, reading, and exploring new ideas.
-            </p>
+        <section class="about-section">
+            <div class="about-image">
+                <img src="images/pfp.jpg" alt="Profile Picture of Anushka Basani">
+            </div>
+            <div class="about-text">
+                <h1>About Me</h1>
+                <p>
+                    Hi! I'm Anushka Basani, a Computer Science student at Michigan State University with a passion for software development, data analysis, and innovation. 
+                    I enjoy solving complex problems, creating meaningful projects, and sharing knowledge. In my free time, I love playing games, baking, reading, and exploring new ideas.
+                </p>
+            </div>
         </section>
     </main>
 
